--- a/server/.env
+++ b/server/.env
@@ -6,12 +6,12 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstack"
 
 # MongoDB
-MONGODB_URI = "-------- Your key here -------"
+MONGODB_URI = "mongodb+srv://aksable1444_db_user:9823675577@cluster0.cmza7nj.mongodb.net"
 
 # ImageKit
-IMAGEKIT_PUBLIC_KEY = '-------- Your key here -------'
-IMAGEKIT_PRIVATE_KEY = '-------- Your key here -------'
-IMAGEKIT_URL_ENDPOINT = '-------- Your key here -------'
+IMAGEKIT_PUBLIC_KEY = 'public_Wc/iKIOVdwinuC9NKyUJXxjKViA='
+IMAGEKIT_PRIVATE_KEY = 'private_gJ+wd/coAYcqyNebZxJklP85EEE='
+IMAGEKIT_URL_ENDPOINT = 'https://ik.imagekit.io/flh9yd6xz'
 
 # Gemini API Key
-GEMINI_API_KEY = '-------- Your key here -------'
+GEMINI_API_KEY = 'AIzaSyBbo-DjypxfIF4MkwceFO4Sg0MDdLN_EFY'
